# rust-actix-mysql-api

./: Cargo.toml  config.example.toml
src/: main.rs
src/controllers/: heroes.rs
src/models/: hero.rs  mod.rs
src/service/: body_parser.rs  connector.rs  mod.rs  responses.rs
src/views/: index.html  mod.rs
src/views/heroes/: index.rs  show.rs
templates/: index.html
templates/heroes/: index.html  show.html
