[package]
name = "heroes"
version = "0.1.0"
authors = ["Tearat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.1.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
warp = "0.2"
serde = "*"
toml = "*"
askama = "0.10"